# wirecall

./: .clang-format  .gitignore  LICENSE.txt  README.md  maidfile.toml  meson.build  meson_options.txt
demos/: bench.c  client.c  embed.c  server.c
demos/async/: client.c  server.c
include/: arena.h  backend.h  memory.h  minicoro.h  platform.h  proc.h  routes.h  scheduler.h
include/rpc/: client.h  protocol.h  server.h  trace.h
include/wirecall/: client.h  protocol.h  server.h  trace.h
src/: client.c  memory.c  payload.c  protocol.c  routes.c  scheduler.c  server.c  trace.c
src/backend/: io_uring.c  kqueue.c  windows.c
tests/: test_integration.c  test_protocol.c  test_routes.c  test_scheduler.c
